# GlobalKeyListener

./: .gitignore  pom.xml
help/: how to build it.txt
help/backup/: com_example_globalkey_NativeKeyboardHook.h  keyboard_hook_win.cpp
help/backup/cmake-linux/: CMakeLists.txt
help/backup/cmake-win/: CMakeLists.txt
native/linux/: CMakeLists.txt  keyboard_hook.cpp
native/win/: CMakeLists.txt
src/main/java/com/example/globalkey/: DroppedEventWatcher.java  GlobalKey.java  KeySequenceManager.java  NativeKeyboardBridge.java  NativeKeyboardHook.java  NativeLibraryLoader.java
src/main/java/com/example/globalkey/api/: KeySequenceBlocker.java
